# fsr-playbook-framework

./: .env.example  .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  AGENTLESS.md  AGENT_QUALITY_PLAN.md  ARCHITECTURE.md  AUTHORING.md  CAPABILITIES.md  CHAT_APP_PLAN.md  CLAUDE.md  DEMO.md  FSR_CONNECTOR_PLAN.md  GAPS.md  MI_DECISION_VALIDATION_AUDIT.md  Makefile  PRESENTATION_OUTLINE.md  PYFSR_MIGRATION_PLAN.md  README.md  RECIPE_EXPANSION_RESEARCH.md  RELEASING.md  REORG_PLAN.md  TODO.md  VISUAL_EDITOR_PLAN.md  fsrpb_main.py  fsrpb_presentation.pptx  pyproject.toml  pytest.ini
data/: CONNECTORS.md  FSR_CUSTOM_JINJA.md  JINJA_IDIOMS.md  MANUAL_INPUT.md  MCP_TOOLS.md  QUERY_API.md  RECIPES.md  STEP_FREQUENCY.md  STEP_TYPES.md  WF_DJANGO_API.md  drafts.db  picklist_name_map.json  schema.sql
docs/: AGENTIC_IR_ARCHITECTURE_REVIEW.md  AGENTLESS.md  AGENT_DATA_AUDIT.md  AGENT_DATA_GAPS.md  AGENT_METRICS_BASELINE_MAY2026.md  AGENT_PROMPT_ADHERENCE.md  AGENT_TOOL_USAGE.md  ARCHITECTURE.md  ARCHITECTURE_AGENT_LOOP.md  AUTHORING.md  CHAT_DEV_RUNBOOK.md  CLI.md  CONTINUE_DYNAMIC_TRIAGE.md  CONTINUE_TRIAGE_BEHAVIOR_FIXES.md  EVAL_PROMPTS.md  FOR_EACH.md  FRAMEWORK_HANDOFF.md  FSR_Playbook_AI_Deepdive.pptx  STEP_WIRE_SHAPES.json  STEP_WIRE_SHAPES.md  STREAMING_300S.md  TRIGGER_FIELD_VALUE_VALIDATION.md  build_deck.py
e2e/: README.md  fsr_stub.py  package.json  playwright.config.ts  pnpm-lock.yaml
examples/: all_step_types_validation.yaml  decision_branch.yaml  demo_alert_action.test.yaml  demo_alert_action.yaml  demo_alert_on_create.test.yaml  demo_alert_on_create.yaml  demo_alert_on_status_change.test.yaml  demo_alert_on_status_change.yaml  demo_code_snippet.test.yaml  demo_code_snippet.yaml  demo_delay.test.yaml  demo_delay.yaml  demo_for_each.yaml  demo_manual_input.test.yaml  demo_manual_input.yaml  demo_parent_child.test.yaml  demo_parent_child.yaml  demo_pure_logic.test.yaml  demo_pure_logic.yaml  demo_record_create.test.yaml  demo_record_create.yaml  demo_record_find_update.test.yaml  demo_record_find_update.yaml  demo_virustotal_ip.test.yaml  demo_virustotal_ip.yaml  find_and_update.yaml  hello_connector.yaml  ip_reputation_check.yaml  ip_reputation_check_abuseipdb.yaml  ip_reputation_check_compiled.json  manual_input_then_act.yaml  parent_calls_child.yaml  probe_mock_output.yaml  (+8 more)
packaging/fsr_playbooks/: README.md  pyproject.toml
web/: .gitignore  ARCHITECTURE_HARDENING_PLAN.md  PLAN.md  README.md  UI_CONSOLIDATION_PLAN.md  pyproject.toml
web/backend/: _history_sink.py  app.py  history.py  secrets_store.py  settings.py  step_args_help.py  step_drafter.py  step_examples.py  system_prompt.py  usage.jsonl
web/backend/llm/: _loop_helpers.py  anthropic_provider.py  approvals.py  factory.py  fake_provider.py  ladder.py  provider.py  tools.py  usage_log.py
web/backend/routes/: chat.py  examples.py  history.py  llm_config.py  mcp.py  playbook.py  playbooks.py  ref.py  visual.py  yaml_routes.py
web/frontend/: package.json  pnpm-lock.yaml  vite.config.ts  vitest.browser.setup.ts  vitest.config.ts
web/frontend/src/: app.css  app.html
web/frontend/src/lib/: api.test.ts  api.ts  commands.svelte.ts  debugStore.svelte.ts  filterSummary.test.ts  filterSummary.ts  fsrValue.ts  jinjaHover.test.ts  jinjaHover.ts  jinjaPathCompletions.test.ts  jinjaPathCompletions.ts  jinjaRender.svelte.ts  jinjaShapesStore.svelte.ts  jinjaShapesStore.test.ts  keybindings.ts  mcpTools.ts  md.ts  monacoEnvironment.ts  monacoYamlSupport.ts  opPickerPrefs.test.ts  opPickerPrefs.ts  playbookActions.svelte.ts  playbookActions.test.ts  playbookStore.svelte.ts  playbookStore.test.ts  runStore.svelte.ts  runVarsStore.svelte.ts  runVarsStore.test.ts  sessionReplay.ts  shapeStubs.test.ts  shapeStubs.ts  sse.test.ts  sse.ts  theme.svelte.ts  triggerModuleFields.svelte.ts  triggerModuleFields.test.ts  varPaneFocus.ts  varPaneStore.svelte.ts  varPaneStore.test.ts  visualApi.test.ts  (+12 more)
web/frontend/src/lib/__mocks__/: monaco-editor.ts
web/frontend/src/lib/__test_harness/: PageWiringHarness.svelte
web/frontend/src/lib/components/: BuildBar.svelte  BuildBar.test.ts  Chat.svelte  Chat.test.ts  CommandPalette.svelte  ConnectorIcon.svelte  ConnectorPicker.svelte  Console.svelte  DebugPanel.svelte  DebugPanel.test.ts  DeployPanel.svelte  DiagnosticsDrawer.svelte  DiagnosticsDrawer.test.ts  DiagnosticsList.svelte  DiagnosticsList.test.ts  DraftsMenu.svelte  EditWorkspace.svelte  EditorToolbar.consolidation.test.ts  EditorToolbar.svelte  EditorToolbar.test.ts  EditorWiring.test.ts  EmptyState.svelte  ExamplesMenu.svelte  ExamplesMenu.test.ts  FailedRunsPanel.svelte  FilterTreeEditor.svelte  FilterTreeEditor.test.ts  FixesPanel.svelte  FlowEdge.svelte  HealthPill.svelte  InspectorIntegration.test.ts  JinjaInlinePreview.svelte  JinjaTestModal.svelte  JinjaToolbar.svelte  JinjaVarPicker.svelte  JinjaVarPicker.test.ts  LoopTelemetry.svelte  MonacoCode.svelte  MonacoCode.test.ts  MonacoYaml.svelte  (+35 more)
web/frontend/src/lib/components/__test_harness/: EditorWiring.svelte  InspectorHarness.svelte
web/frontend/src/lib/jinja/: enhanceJinjaEditor.ts  jinjaErrors.ts  jinjaFilters.ts  jinjaLanguage.ts  jinjaQuickFixes.ts  jinjaSnippets.ts  jinjaTemplates.ts  registerJinja.ts  yamlJinjaTokens.ts
web/frontend/src/routes/: +layout.svelte  +page.svelte  page-wiring.test.ts
web/frontend/src/routes/browse/: +page.svelte
web/frontend/src/routes/capabilities/: +page.svelte
web/frontend/src/routes/docs/: +page.svelte
web/frontend/src/routes/edit/: +page.svelte
web/frontend/src/routes/history/: +page.svelte
web/frontend/src/routes/inventory/: +page.svelte
web/frontend/src/routes/run/: +page.svelte
web/frontend/src/routes/settings/: +page.svelte
web/tests/: conftest.py  test_approvals.py  test_chat.py  test_example_prompts.py  test_health.py  test_history.py  test_llm_config_routes.py  test_llm_factory.py  test_lmstudio_provider.py  test_path_to_line.py  test_playbook_routes.py  test_playbooks_routes.py  test_settings.py  test_step_drafter.py  test_step_examples.py  test_tools.py  test_yaml_routes.py
(+976 files in other folders)
