[project]
name = "fsrpb"
version = "0.0.1"
description = "FortiSOAR Playbook YAML compiler + reference store"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.21",
    "jinja2>=3.1",
    # Local sibling repo, installed editable in dev:
    #   pip install -e ../pyfsr
    "pyfsr",
    "mcp>=1.0",
]

[project.scripts]
# `fsrpb_main` (repo-root shim) bootstraps python/ onto sys.path, then calls
# cli.main — cli.py is NOT an installed package so it can't be the entry directly.
fsrpb = "fsrpb_main:main"

[tool.setuptools]
# fsr_core lives at the repo root; legacy packages still under python/.
package-dir = {"" = ".", "probes" = "python/probes", "store" = "python/store", "e2e" = "python/e2e"}
py-modules = ["fsrpb_main"]
packages = [
    "probes", "store", "e2e",
    "fsr_core",
    "fsr_core.compiler", "fsr_core.compiler.resolver", "fsr_core.compiler.rulesets",
    "fsr_core.mcp_server",
    "fsr_core.llm",
]

[tool.ruff]
# fsr_core ships into the SOAR 3.9 runtime, so lint at the lowest baseline we
# support — this is what catches module-level PEP 604 unions before they reach
# the connector. The Studio backend/CLI run on 3.11+, but py39 is the safe floor.
target-version = "py39"
extend-exclude = ["web/frontend", "store", ".venv"]

[tool.ruff.lint]
# Start with pyflakes (F): unused imports/vars, redefinitions, undefined names,
# f-strings without placeholders. Broaden (E/I/UP/B) in a follow-up sweep.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export submodule symbols (and, in mcp_server,
# import tool modules purely to register their @mcp.tool decorators). The
# "unused import" is the intended public surface / registration side effect.
"**/__init__.py" = ["F401"]
