[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsr_playbooks"
# Version is sourced from fsr_playbooks.__version__ (single source of truth).
dynamic = ["version"]
description = "FortiSOAR playbook authoring/compiler framework: YAML->FSR-JSON compiler, LLM co-authoring, and MCP server tools."
readme = "README.md"
# Targets FortiSOAR 8.0.0 (Python 3.12) — the only supported runtime going
# forward. Older 3.9/3.11 SOAR boxes are intentionally out of scope.
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dylan Spille" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Base = compiler + agent dataclasses. Verified by import scan (2026-06-17):
# NOT jsonschema (0 uses), NOT pyfsr (never hard-imported).
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# LLM providers — real imports only in fsr_playbooks/llm/*_provider.py.
llm = [
    "openai>=1.0",
    "anthropic>=0.40",
]
# MCP server — mcp_server hard-imports fsr_playbooks.llm, so [mcp] implies [llm].
mcp = [
    "fsr_playbooks[llm]",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/ftnt-dspille/fsr-playbook-framework"
Repository = "https://github.com/ftnt-dspille/fsr-playbook-framework"
Issues = "https://github.com/ftnt-dspille/fsr-playbook-framework/issues"

# ---------------------------------------------------------------------------
# Build config. This dist lives at packaging/fsr_playbooks/ but the source tree
# is at the repo ROOT (../../fsr_playbooks), because the root pyproject.toml is
# taken by the `fsrpb` dist. The relative `..` package-dir works for pip's
# in-place VCS *wheel* build off a git clone (Phase-1 git+https#subdirectory=...).
# An sdist would be broken by the `..` — acceptable; we only ship wheels via VCS.
# ---------------------------------------------------------------------------
# `find.where = ../..` sets package_dir {"": "../.."} implicitly, mapping
# fsr_playbooks -> ../../fsr_playbooks. The include filter keeps the sibling
# root packages (probes/store/e2e + the fsrpb shim) out of this dist.
[tool.setuptools.packages.find]
where = ["../.."]
include = ["fsr_playbooks*"]
# tests are not part of the shipped surface.
exclude = ["fsr_playbooks.tests*"]

[tool.setuptools.package-data]
# Non-.py runtime assets that MUST ship (system prompts, NOC scenarios).
"fsr_playbooks.agent" = ["*.md"]
"fsr_playbooks.mcp_server" = ["*.json"]
# Slim compile catalog (~0.6 MB): stable step/jinja/recipe tables so a fresh
# install compiles without a probed DB. Built by
# tooling/catalog/build_compile_catalog.py; per-install tables ship empty
# (warmed from the target SOAR).
"fsr_playbooks" = ["_data/*.db"]

[tool.setuptools.dynamic]
version = { attr = "fsr_playbooks.__version__" }
