[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsr_playbooks"
# Version is sourced from fsr_playbooks.__version__ (single source of truth).
dynamic = ["version"]
description = "FortiSOAR playbook authoring/compiler framework: YAML->FSR-JSON compiler, LLM co-authoring, and MCP server tools."
readme = "README.md"
# The compiler/CLI runs off-box (CI, pyfsr's [playbooks] extra, dev laptops),
# so the floor tracks the lowest still-supported Python (3.10; 3.9 is EOL) — not
# the SOAR runtime. No 3.12-only syntax is used; deps all support 3.10.
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dylan Spille" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Base = compiler + agent dataclasses. Verified by import scan (2026-06-17):
# NOT jsonschema (0 uses), NOT pyfsr (never hard-imported).
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "jinja2>=3.1",
    # The typed_args compile layer (compiler/typed_args/*) hard-imports pydantic
    # v2 (Discriminator/Tag/AliasChoices), reached unconditionally via the
    # compiler resolver — so it's a base runtime dep, not an extra.
    "pydantic>=2",
]

[project.optional-dependencies]
# LLM providers — real imports only in fsr_playbooks/llm/*_provider.py.
llm = [
    "openai>=1.0",
    "anthropic>=0.40",
]
# MCP server — mcp_server hard-imports fsr_playbooks.llm, so [mcp] implies [llm].
mcp = [
    "fsr_playbooks[llm]",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/ftnt-dspille/fsr-playbook-framework"
Repository = "https://github.com/ftnt-dspille/fsr-playbook-framework"
Issues = "https://github.com/ftnt-dspille/fsr-playbook-framework/issues"

# ---------------------------------------------------------------------------
# Build config. This dist lives at packaging/fsr_playbooks/ but the source tree
# is at the repo ROOT (../../fsr_playbooks), because the root pyproject.toml is
# taken by the `fsrpb` dist. The relative `..` package-dir works for pip's
# in-place VCS *wheel* build off a git clone (Phase-1 git+https#subdirectory=...).
# An sdist would be broken by the `..` — acceptable; we only ship wheels via VCS.
# ---------------------------------------------------------------------------
# `find.where = ../..` sets package_dir {"": "../.."} implicitly, mapping
# fsr_playbooks -> ../../fsr_playbooks. The include filter keeps the sibling
# root packages (probes/store/e2e + the fsrpb shim) out of this dist.
[tool.setuptools.packages.find]
where = ["../.."]
include = ["fsr_playbooks*"]
# tests are not part of the shipped surface.
exclude = ["fsr_playbooks.tests*"]

[tool.setuptools.package-data]
# Non-.py runtime assets that MUST ship (system prompts, NOC scenarios).
"fsr_playbooks.agent" = ["*.md"]
"fsr_playbooks.mcp_server" = ["*.json"]
# Slim compile catalog (~0.6 MB): stable step/jinja/recipe tables so a fresh
# install compiles without a probed DB. Built by
# tooling/catalog/build_compile_catalog.py; per-install tables ship empty
# (warmed from the target SOAR).
"fsr_playbooks" = ["_data/*.db"]

[tool.setuptools.dynamic]
version = { attr = "fsr_playbooks.__version__" }
